2005-10-10  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-string.c: (ephy_string_blank_chr),
	(ephy_string_shorten):
	* lib/ephy-string.h:

	Bring back ephy_string_shorten.

	* src/ephy-tab.c: (ephy_tab_file_monitor_cb), (ephy_tab_set_title):

	Shorten overlong tab titles, hard. Increase reload delay slightly.
	Strip whitespace from tab title before determining if it's empty.

2005-10-09  Christian Persch  <chpe@cvs.gnome.org>

        * lib/ephy-debug.c:

	Search the needle in the haystack, not the other way 'round.

2005-10-09  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-debug.c:

	Fix logging.

2005-10-09  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* data/ui/epiphany-ui.xml:
	* src/ephy-window.c: (show_embed_popup), 
	(update_image_actions_visibility):

	Eliminate the *Popup/*ImagePopup popup variants.
	Add image context to all popups it can show up.
	Display image context dynamically.
	
2005-10-09  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-shell.c:

	Remove DBUS define, it's always compiled now.

2005-10-08  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-debug.c:

	Fix profiling in builddir != srcdir builds.

2005-10-08  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_start),
	(ephy_spinner_dispose), (ephy_spinner_finalize),
	(ephy_spinner_class_init):

	Ensure the images are loaded before starting to spin.
	Should fix crashes on start/new tab.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar.c: (ephy_toolbar_update_spinner):

	Remove unused variable.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Sync with gnome-2-12.

2005-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar.c: (ephy_toolbar_update_spinner),
	(ephy_toolbar_set_show_leave_fullscreen),
	(ephy_toolbar_set_security_state),
	(ephy_toolbar_set_lock_visibility), (ephy_toolbar_set_spinning):

	Use flags to save memory for the priv struct.
