@@ -30,7 +30,7 @@ gboolean  ephy_string_to_int	(const char *string,
 
 char	 *ephy_string_blank_chr	(char *source);
 
-char	 *ephy_string_shorten	(const char *str,
+char	 *ephy_string_shorten	(char *str,
 				 gsize target_length);
 
 G_END_DECLS
